src/bootstrap/test/v0_5/rejects/14_cycle_reject/main.zg
import "b"

print b.from_b()
